Fix typo in thesis abstract

--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -38,7 +38,7 @@
 \maketitle
 
 \begin{abstract}
-	This thesis draft reviews faceted execution, a programming-language mechanism for enforcing privacy policies. I discuss several issues with the use of faceted execution in real-world software development (efficiency, type safety, compatibility with non-faceted code), and review methods of mitigating these issues (abstract interpretation, static typing, Racket's \texttt{\#lang} mechanism). I present a proof-of-concept of a modue-rewriting technique that could be used to improve the existing \textsc{Racets} system \cite{racets} for faceted execution in Racket.
+	This thesis draft reviews faceted execution, a programming-language mechanism for enforcing privacy policies. I discuss several issues with the use of faceted execution in real-world software development (efficiency, type safety, compatibility with non-faceted code), and review methods of mitigating these issues (abstract interpretation, static typing, Racket's \texttt{\#lang} mechanism). I present a proof-of-concept of a module-rewriting technique that could be used to improve the existing \textsc{Racets} system \cite{racets} for faceted execution in Racket.
 \end{abstract}
 
 \tableofcontents
