Fix typo in bibliography

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -30,7 +30,7 @@
 @InProceedings{aam,
   author    = {Van Horn, David and Might, Matthew},
   title     = {Abstracting abstract machines},
-  booktitle = {Proceeding of the 15th ACM SIGPLAN International Conference on Functional Programming},
+  booktitle = {Proceedings of the 15th ACM SIGPLAN International Conference on Functional Programming},
   year      = {2010},
   pages     = {51--62},
   address   = {New York, NY},
