--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -71,4 +71,11 @@
   howpublished = {\url{https://docs.racket-lang.org/reference/syntax-model.html#(part._fully-expanded)}},
 }
 
+@InProceedings{cesk,
+  author    = {Felleisen, Mattias and Felleisen, D. P.},
+  title     = {A calculus for assignments in higher-order languages},
+  booktitle = {Proceedings of the 14th ACM SIGACT-SIGPLAN Symposium on Principles of Programming Languages},
+  year      = {1987},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
